# .dotfiles

./: .bash_aliases  .bashrc  .tmux.conf  .vimrc  README.md  ginit.sh  install.sh  install_list  tmp.sh
etc/: tmux_help.txt
etc/cmake/: CMakeLists.txt
etc/snippets/: cmake.snip  cpp.snip  doxygen.snip  python.snip
